--- a/app/css/modal.css
+++ b/app/css/modal.css
@@ -1,4 +1,3 @@
-/* Style the Image Used to Trigger the Modal */
 #myImg {
     border-radius: 5px;
     cursor: pointer;
@@ -22,7 +21,7 @@
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
 
-/* Modal Content (Image) */
+/* Modal Content (image) */
 .modal-content {
     margin: auto;
     display: block;
@@ -30,7 +29,7 @@
     max-width: 700px;
 }
 
-/* Caption of Modal Image (Image Text) - Same Width as the Image */
+/* Caption of Modal Image */
 #caption {
     margin: auto;
     display: block;
@@ -42,8 +41,8 @@
     height: 150px;
 }
 
-/* Add Animation - Zoom in the Modal */
-.modal-content, #caption { 
+/* Add Animation */
+.modal-content, #caption {
     -webkit-animation-name: zoom;
     -webkit-animation-duration: 0.6s;
     animation-name: zoom;
@@ -51,22 +50,22 @@
 }
 
 @-webkit-keyframes zoom {
-    from {-webkit-transform:scale(0)} 
+    from {-webkit-transform:scale(0)}
     to {-webkit-transform:scale(1)}
 }
 
 @keyframes zoom {
-    from {transform:scale(0)} 
+    from {transform:scale(0)}
     to {transform:scale(1)}
 }
 
 /* The Close Button */
 .close {
     position: absolute;
-    top: 15px;
+    top: 50px;
     right: 35px;
     color: #f1f1f1;
-    font-size: 300px;
+    font-size: 50px;
     font-weight: bold;
     transition: 0.3s;
 }
