--- a/app/css/creative.css
+++ b/app/css/creative.css
@@ -176,7 +176,19 @@ header .header-content {
   text-align: center;
   padding: 100px 15px 100px;
   width: 100%;
+  width: 100%;
 }
+
+
+section .section-content .section-content-inner h2 {
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 30px;
+}
+
+
 header .header-content .header-content-inner h1 {
   font-weight: 700;
   text-transform: uppercase;
