--- a/app/css/creative.css
+++ b/app/css/creative.css
@@ -13,6 +13,9 @@ body {
 }
 
 
+
+
+
 .row .thumbnail {
     border:0;
     box-shadow:0;
@@ -31,7 +34,7 @@ a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
-  color: #F05F40;
+  color: #ffffff;
 }
 a:hover,
 a:focus {
@@ -65,7 +68,7 @@ p {
   color: rgba(255, 255, 255, 0.7);
 }
 section {
-  padding: 100px 0;
+  padding: 30px 30px;
 }
 aside {
   padding: 50px 0;
@@ -189,6 +192,8 @@ section .section-content .section-content-inner h2 {
 }
 
 
+
+
 header .header-content .header-content-inner h1 {
   font-weight: 700;
   text-transform: uppercase;
@@ -238,7 +243,11 @@ header .header-content .header-content-inner p {
 .service-box {
   max-width: 400px;
   margin: 50px auto 0;
+    
 }
+
+
+
 @media (min-width: 992px) {
   .service-box {
     margin: 20px auto 0;
