--- a/app/css/creative.css
+++ b/app/css/creative.css
@@ -14,9 +14,7 @@ body {
 
 
 
-
-
-.row .thumbnail {
+.row .thumbnail{
     border:0;
     box-shadow:0;
     border-radius:0;
@@ -30,6 +28,11 @@ hr {
 hr.light {
   border-color: white;
 }
+
+container (odd) {
+
+}
+
 a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
@@ -67,7 +70,7 @@ p {
 .text-faded {
   color: rgba(255, 255, 255, 0.7);
 }
-section {
+section  {
   padding: 30px 30px;
 }
 aside {
