--- a/app/css/creative.css
+++ b/app/css/creative.css
@@ -453,3 +453,15 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: #222222;
 }
+.modal-body .form-horizontal .col-sm-2,
+.modal-body .form-horizontal .col-sm-10 {
+    width: 100%
+}
+
+.modal-body .form-horizontal .control-label {
+    text-align: left;
+}
+.modal-body .form-horizontal .col-sm-offset-2 {
+    margin-left: 15px;
+}
+
